samples/_failures_safe/1761225853_252e33_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d1f5880c.c: In function ‘main’:
./samples/SAFE/__tmp_d1f5880c.c:132:12: error: missing terminating " character
  132 |     printf("\nMatrix B:\
      |            ^~~~~~~~~~~~~
./samples/SAFE/__tmp_d1f5880c.c:132:5: error: expected expression at end of input
  132 |     printf("\nMatrix B:\
      |     ^~~~~~
./samples/SAFE/__tmp_d1f5880c.c:132:5: error: expected declaration or statement at end of input
